K8S/Platform-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platformservice-deploy
 # labels:
  #  app: platformservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platformservice
  template:
    metadata:
      labels:
        app: platformservice
    spec:
      containers:
      - name: platformservice
        image: hamzataoujouti/k8_platformservice:latest
        imagePullPolicy: Never
     #   ports:
      #  - containerPort: 80
---
apiVersion: v1
kind: Service
metadata: 
  name: platformservice-ip-srv
spec:
  type: ClusterIP
  selector:
    app: platformservice
  ports:
    - name: platformservice
      protocol: TCP
      targetPort: 80
      port: 8080
