K8S/Platform-np-svr.yml
apiVersion: v1
kind: Service
metadata:
  name: platformservice
#  labels:
 #   app: platformservice
spec:
  type: NodePort
  selector:
    app: platformservice
  ports:
  - name: platformservice
    protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30002

# kubectl apply -f Platform-np-svr.yml
